[package]
name = "core_std"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { workspace = true }
byteorder = { workspace = true }
tokio = { workspace = true }
hex = { workspace = true }
url = { workspace = true }
derive_more = { workspace = true }
serde = { workspace = true }
alloy-primitives = { workspace = true }
