[package]
name = "net_client"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { workspace = true }
thiserror = { workspace = true }
once_cell = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
tower = { workspace = true }
serde_json = { workspace = true }

alloy = { workspace = true }
alloy-network = { workspace = true }
alloy-chains = { workspace = true }
