[package]
name = "client_ethscan"
version = "0.1.0"
edition = "2021"

[dependencies]
net_client = { workspace = true }

tracing = { workspace = true }
thiserror = { workspace = true }

url = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

alloy = { workspace = true }
reqwest = { workspace = true }
